<resources>
    <string name="app_name">TODO</string>
    <string name="hintTextNoteAddNote">Введите текст записки:</string>
    <string name="radioButtonGreenNoteAddNote">Низкий
        приоритет</string>
    <string name="radioButtonYellowNoteAddNote">Средний
        приоритет</string>
    <string name="radioButtonRedNoteAddNote">Высокий
        приоритет</string>
    <string name="buttonMakeNoteAddNote">Записать</string>
</resources>