<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/editTextNoteAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/hintTextNoteAddNote"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupNotesAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNoteAddNote"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioButtonGreenNoteAddNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"

            android:text="@string/radioButtonGreenNoteAddNote"
            android:textSize="8sp"
            tools:targetApi="o" />

        <RadioButton
            android:id="@+id/radioButtonYellowNoteAddNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"

            android:text="@string/radioButtonYellowNoteAddNote"
            android:textSize="8sp"
            tools:ignore="SmallSp,UnusedAttribute" />

        <RadioButton
            android:id="@+id/radioButtonRedNoteAddNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"

            android:text="@string/radioButtonRedNoteAddNote"
            android:textSize="8sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonMakeNoteAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="36dp"
        android:text="@string/buttonMakeNoteAddNote"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupNotesAddNote" />
</LinearLayout>